# game.libretro.dinothawr

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/dinothawr/: CMakeLists.txt  dinothawr.txt
game.libretro.dinothawr/: addon.xml  addon.xml.in
game.libretro.dinothawr/resources/: buttonmap.xml  settings.xml
game.libretro.dinothawr/resources/language/English/: strings.po
game.libretro.dinothawr/resources/language/resource.language.af_za/: strings.po
game.libretro.dinothawr/resources/language/resource.language.am_et/: strings.po
game.libretro.dinothawr/resources/language/resource.language.ar_dz/: strings.po
game.libretro.dinothawr/resources/language/resource.language.ar_sa/: strings.po
game.libretro.dinothawr/resources/language/resource.language.ast_es/: strings.po
game.libretro.dinothawr/resources/language/resource.language.az_az/: strings.po
game.libretro.dinothawr/resources/language/resource.language.be_by/: strings.po
game.libretro.dinothawr/resources/language/resource.language.bg_bg/: strings.po
game.libretro.dinothawr/resources/language/resource.language.bs_ba/: strings.po
game.libretro.dinothawr/resources/language/resource.language.ca_es/: strings.po
game.libretro.dinothawr/resources/language/resource.language.cs_cz/: strings.po
game.libretro.dinothawr/resources/language/resource.language.cy_gb/: strings.po
game.libretro.dinothawr/resources/language/resource.language.da_dk/: strings.po
game.libretro.dinothawr/resources/language/resource.language.de_de/: strings.po
game.libretro.dinothawr/resources/language/resource.language.el_gr/: strings.po
game.libretro.dinothawr/resources/language/resource.language.en_GB/: strings.po
game.libretro.dinothawr/resources/language/resource.language.en_au/: strings.po
game.libretro.dinothawr/resources/language/resource.language.en_gb/: strings.po
game.libretro.dinothawr/resources/language/resource.language.en_nz/: strings.po
(+72 files in other folders)
